crates/tuirealm-stdlib/tests/snapshots/component_gauge__gauge_default.snap
---
source: crates/tuirealm-stdlib/tests/component_gauge.rs
expression: rendered
---
┌Progress──────────────────────────────┐
│█████████████████50%                  │
└──────────────────────────────────────┘
